
add_subdirectory(googletest-main)
add_subdirectory(GLFW)
add_subdirectory(ImGui)
add_subdirectory(GLAD)
add_subdirectory(glm)
add_subdirectory(stb_image)
add_subdirectory(cpuinfo)
add_subdirectory(msgpack)
add_subdirectory(ImGuiFileDialog)
add_subdirectory(ImPlot)
add_subdirectory(cpptrace)
add_subdirectory(nativefiledialog-extended)
add_subdirectory(assimp)
add_subdirectory(gli)
add_subdirectory(ImGuizmo)